# autonomous-redteam-framework

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  design-decisions.md  lab-setup.md  threat-model.md  usage.md
src/artasf/: __init__.py  main.py
src/artasf/core/: audit.py  authorization.py  config.py  exceptions.py  logging.py  models.py  orchestrator.py  workflow.py
src/artasf/exploit/: executor.py  exploit_types.py  msf_rpc.py
src/artasf/exploit/web_attacks/: api_key_hunter.py  endpoint_spider.py  file_upload.py  full_web_scan.py  sqli.py  sqli_generic.py  xss.py
src/artasf/planner/: plan_types.py  planner.py  ranking.py
src/artasf/post/: enum.py  loot.py  privesc.py  session.py  webshell.py
src/artasf/recon/: dns_enum.py  http_enrich.py  nmap_parser.py  nmap_runner.py  recon_types.py
src/artasf/reporting/: render.py  report_html.py  report_pdf.py
src/artasf/reporting/templates/: report.html  styles.css
src/artasf/storage/: __init__.py  db.py  file_store.py  repos.py  schema.sql
src/artasf/ui/: cli.py  console_views.py
src/artasf/utils/: __init__.py  retry.py
src/artasf/vulnmap/: mapper.py  scoring.py  vuln_types.py
src/artasf/vulnmap/sources/: exploit_refs.py  offline_cve.py
tests/: test_nmap_parser.py  test_orchestrator.py  test_planner.py  test_post_webshell.py  test_scoring.py  test_storage.py
