[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artasf"
version = "0.1.0"
description = "Autonomous Red Team Assessment Framework"
requires-python = ">=3.11"
dependencies = [
    # AI / LLM
    "anthropic>=0.40.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Async
    "anyio>=4.4.0",
    # Logging
    "loguru>=0.7.2",
    # Terminal UI
    "rich>=13.7.0",
    "typer>=0.12.0",
    # Storage
    "aiosqlite>=0.20.0",
    # HTTP / recon enrichment
    "httpx>=0.27.0",
    # Metasploit RPC
    "pymetasploit3>=1.0.3",
    # DNS enumeration
    "dnspython>=2.6.0",
    # Environment
    "python-dotenv>=1.0.0",
    # Reporting
    "jinja2>=3.1.0",
    "weasyprint>=62.0",
]

[project.scripts]
artasf = "artasf.ui.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
